# vanishcap

./: .gitignore  README.md  pyproject.toml
conf/: controller_config.yaml  multi_config.yaml  multi_offline.yaml  offline.yaml  single_config.yaml
tests/: __init__.py  test_cli.py  test_controller.py  test_event.py  test_worker.py
tests/drivers/: test_base.py  test_tello.py
tests/utils/: test_logging.py  test_wifi.py
tests/workers/: __init__.py  test_detector.py  test_drone.py  test_navigator.py  test_ui.py  test_video.py
utils/: drone_control.py  drone_specs.py  measure_yolo.py  video_viewer.py
vanishcap/: __init__.py  cli.py  controller.py  event.py  worker.py
vanishcap/drivers/: __init__.py  base.py  offline.py  tello.py
vanishcap/utils/: logging.py  wifi.py
vanishcap/workers/: __init__.py  detector.py  drone.py  navigator.py  ui.py  video.py
veil/: __init__.py  cli.py  controller.py  event.py  worker.py
veil/examples/: offline.yaml
veil/utils/: logging.py
veil/workers/: __init__.py  detector.py  navigator.py  ui.py  video.py
